# hackclub-slack-emoji-dl

./: .gitignore  Cargo.toml  README.md  main.py
src/: main.rs
